favicon linked correctly + scripts are of type module now

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Schattenjacht</title>
    <link rel="stylesheet" href="css/styles.css">
-   <link rel="icon" type="image/x-icon" href="img/favicon.png">
-   <script src="js/main.js" defer></script>
+   <link rel="icon" type="image/x-icon" href="img/favicon.ico">
+   <script type="module" src="js/main.js" defer></script>
 </head>
 
 <body>
